Refactor config loading to use general inheritance

--- a/config/config.en.yml
+++ b/config/config.en.yml
@@ -1,104 +1,2 @@
-locale: [en_US]
-rollbar_token: 88f5bd483f7348ea8b0564449c8d77cd
-server_timezone: UTC
-wiki_timezone: Europe/Oslo
-homesite: en.wikipedia.org
-default_prefix: en
-othersites:
-    - no.wikipedia.org
-    - fi.wikipedia.org
-    - nn.wikipedia.org
-    - se.wikipedia.org
-    - commons.wikimedia.org
-    # - www.wikidata.org
-awards:
-    blå: { file: Article blue.svg, winner: true }
-    rød: { file: Article red.svg, winner: true }
-    gul: { file: Article yellow.svg, organizer: true }
-    oransj: { file: Article orange.svg, winner: true }
-    orange: { file: Article orange.svg, winner: true }
-    grønn: { file: Article green.svg }
-    grå: { file: Article grey.svg }
-    lyslilla: { file: Article MediumPurple.svg }
-    lilla: { file: Article purple.svg }
-    brun: { file: Article brown.svg }
-award_messages:
-    winner_template: '{{UK winner|year=%(year)s|week=%(week)s|%(award)s=yes}}'
-    participant_template: '{{UK participant|year=%(year)s|week=%(week)s|%(award)s=yes}}'
-    organizer_template: '{{UK organizer|year=%(year)s|week=%(week)s|%(award)s=yes|showuk=no}}'
-templates:
-    botinfo: UKB botinfo
-    status: UKB status
-    commonargs:
-        year: year
-        week: week
-        week2: week2
-        yes: yes
-        no: no
-    infobox:
-        name: UKB infobox
-        status: status
-        start: start
-        end: end
-        organizer: organizer
-        winner: winner
-    suspended:
-        name: UKB participant suspended
-    disqualified:
-        name: UKB contribution disqualified
-    penalty:
-        name: UK points penalty
-    bonus:
-        name: UK points
-    rule:
-        name: UKB points
-        new: new
-        redirect: redirect
-        refsectionfi: refsectionfi
-        qualified: qualified
-        contrib: edit
-        byte: byte
-        word: word
-        maxpoints: maxpoints
-        site: site
-        image: image
-        external_link: external link
-        ref: citation
-        templateremoval: template removal
-        bytebonus: bytebonus
-        wordbonus: wordbonus
-        alias: alias
-        own: self-uploaded
-        ownwork: own-work
-        maxinitialcount: initial limit
-        wikidata: wikidata
-        properties: properties
-        require_reference: require_reference
-    filters: !include filters.en.yml
-pages:
-    catignore: User:UKBot/ignored categories
-    active_contests_category: Category:UKB active contests
-contestPages:
-    resultsSection: Results
-    participantsSection: 'Participants'
-    footer: "[[Category:UKBot contests]]"
-awardstatus:
-    pagename: Bruker:UKBot/Premieutsendelse
-    wait: Venter
-    send: Send ut
-    sent: Sendt
-noticeboard:
-    name: Wikipedia:Portal/Oppslagstavle
-    template:
-        name: la stå/uk
-        date: dato
-ignore:
-    - Tilbakestilte endring # MediaWiki:Revertpage/nb
-    - Attenderulla endring  # MediaWiki:Revertpage/nn
-    - rievdadusat sihkkojuvvui ja siidu  # MediaWiki:Revertpage/se
-    - Reverted edits by  # MediaWiki:Revertpage/en
-    - Fjerner revisjon # MediaWiki:Undo-summary/nb
-    - Rullar attende versjon # MediaWiki:Undo-summary/nn
-    - Undo revision # MediaWiki:Revertpage/en
-    - clientsitelink-update  # Wikidata: Page moved from .. to ..
-    - clientsitelink-remove  # Wikidata: Removed sitelink
+_extends: include/enwiki.yml
+
