--- a/config/config.eu.yml
+++ b/config/config.eu.yml
@@ -1,12 +1,10 @@
-locale: [eu_ES,en_US]
-rollbar_token: 88f5bd483f7348ea8b0564449c8d77cd
-server_timezone: UTC
-wiki_timezone: Europe/Oslo
-homesite: eu.wikipedia.org
-othersites:
-    - eu.wikibooks.org
-    - www.wikidata.org
-default_prefix: eu
+_extends: include/euwiki.yml
+pages:
+    base: 'Atari:Hezkuntza/Lehiaketak'
+    default: 'Atari:Hezkuntza/Lehiaketak/%(year)d/%(month)02d'
+    redirect:
+      - 'Atari:Hezkuntza/Lehiaketak'
+      - 'WP:L'
 plot:
     datafile: plots/Lehiaketak %(year)d-%(month)02d.json
     figname: plots/Lehiaketak %(year)d-%(month)02d.svg
@@ -18,76 +16,8 @@ plot:
         |Date           = %(start)s
         |Author         = [[User:UKBot|UKBot]]
         }}
-        
+
         == {{int:license-header}} ==
         {{PD-self}}
-        
+
         [[Category:Lehiaketak]]
-templates:
-    botinfo: UKB botinfo
-    status: UKB status
-    commonargs:
-        year: year
-        week: week
-        week2: week2
-        yes: yes
-        no: no
-    infobox:
-        name: UKB infotaula
-        status: status
-        start: hasiera
-        end: amaiera
-        organizer: organizer
-        winner: winner
-    suspended:
-        name: UKB participant suspended
-    disqualified:
-        name: UKB contribution disqualified
-    penalty:
-        name: UKB puntuak kentzea
-    bonus:
-        name: UK bonus
-    rule:
-        name: UKB puntuak
-        new: berria
-        redirect: birzuzenketa
-        refsectionfi: refsectionfi
-        qualified: qualified
-        contrib: edizioa
-        byte: byte
-        word: hitza
-        maxpoints: maxpoints
-        site: site
-        image: irudia
-        external_link: kanpo lotura
-        ref: erreferentzia
-        templateremoval: txantiloia kentzea
-        bytebonus: bytebonus
-        wordbonus: hitzbonus
-        alias: alias
-        own: self-uploaded
-        ownwork: own-work
-        maxinitialcount: initial limit
-        wikidata: wikidata
-        properties: properties
-        require_reference: require_reference
-    filters: !include filters.eu.yml
-pages:
-    base: 'Atari:Hezkuntza/Lehiaketak'
-    default: 'Atari:Hezkuntza/Lehiaketak/%(year)d/%(month)02d'
-    redirect:
-      - 'Atari:Hezkuntza/Lehiaketak'
-      - 'WP:L'
-contestPages:
-    participantsSection: 'Parte-hartzaileak'
-    footer: ""
-ignore:
-    - Tilbakestilte endring # MediaWiki:Revertpage/nb
-    - Attenderulla endring  # MediaWiki:Revertpage/nn
-    - rievdadusat sihkkojuvvui ja siidu  # MediaWiki:Revertpage/se
-    - Reverted edits by  # MediaWiki:Revertpage/en
-    - Fjerner revisjon # MediaWiki:Undo-summary/nb
-    - Rullar attende versjon # MediaWiki:Undo-summary/nn
-    - Undo revision # MediaWiki:Revertpage/en
-    - clientsitelink-update  # Wikidata: Page moved from .. to ..
-    - clientsitelink-remove  # Wikidata: Removed sitelink
