Improve wikidata statement rule
Include only first statement by default, but allow including more by setting a parameter `all`

--- a/config/sites/fiwiki.yml
+++ b/config/sites/fiwiki.yml
@@ -59,6 +59,7 @@ templates:
         wikidata: wikidata
         properties: properties
         require_reference: require_reference
+        all: alle
     filters:
         name: Viikon kilpailu kriteerit
         params:
