--- a/config/sites/euwiki.yml
+++ b/config/sites/euwiki.yml
@@ -58,6 +58,7 @@ templates:
         wikidata: wikidata
         properties: properties
         require_reference: require_reference
+        all: alle
     filters:
         name: UKB irizpide
         params:
