Add wikidata label fallback chain config option

--- a/config/sites/enwiki.yml
+++ b/config/sites/enwiki.yml
@@ -4,6 +4,7 @@ server_timezone: UTC
 wiki_timezone: Europe/Oslo
 homesite: en.wikipedia.org
 default_prefix: en
+wikidata_languages: ['en']
 pages:
     catignore: User:UKBot/ignored categories
     active_contests_category: Category:UKB active contests
