Add wikidata rule for labels, descriptions and aliases

--- a/config/sites/enwiki.yml
+++ b/config/sites/enwiki.yml
@@ -59,6 +59,9 @@ templates:
         maxinitialcount: initial limit
         wikidata: wikidata
         properties: properties
+        labels: labels
+        aliases: aliases
+        descriptions: descriptions
         require_reference: require_reference
         all: alle
     filters:
