--- a/config/sites/fiwiki.yml
+++ b/config/sites/fiwiki.yml
@@ -59,6 +59,9 @@ templates:
         maxinitialcount: makskuvienmäärä
         wikidata: wikidata
         properties: properties
+        labels: labels
+        aliases: aliases
+        descriptions: descriptions
         require_reference: require_reference
         all: alle
     filters:
