--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,12 @@
 
 language: python
 python:
-  - "2.7"
+  - 3.5
+  - 3.6
 
 # command to install dependencies, e.g. 
 install: 
-  - "pip install -r requirements.txt --use-mirrors"
+  - pip install -r requirements.txt
 
-#before_script:
-
-# command to run tests, e.g. python setup.py test
-script: nosetests
+script:
+  - pytest -v
