Switch to ukbot.toolforge.org

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,7 +6,7 @@ venv = /data/project/ukbot/www/python/venv
 module = app
 callable = app
 manage-script-name = true
-mount = /ukbot=app:app
+mount = /=app:app
 single-interpreter = true
 # http-websockets = true
 # http-raw-body = true
