--- a/www/python/uwsgi.ini
+++ b/www/python/uwsgi.ini
@@ -1,18 +1,7 @@
 [uwsgi]
-plugin = python3
-;chdir = www/python/src
-venv = www/python/venv
-mount = /=www/python/src/app.py
-mount = /ws=www/python/src/websocket.py
+mount = /ws=websocket.py
 
-; generally flask apps expose the 'app' callable instead of 'application'
-callable = app
 
 ; tell uWSGI to rewrite PATH_INFO and SCRIPT_NAME according to mount-points
-manage-script-name = true
+;manage-script-name = true
 
-; enable websocket ping-pong to avoid connections being closed after 30 seconds
-http-websockets = true
-
-; increase buffer size to avoid errors
-buffer-size = 32768
