Add smnwiki to contest for nowiki
Per https://no.wikipedia.org/w/index.php?title=Wikipedia:Torget&oldid=22987903#Legge_til_enda_en_spr%C3%A5kversjon_til_m%C3%A5nedens_konkurranse,_yay_or_nay?

--- a/config/sites/nowiki.yml
+++ b/config/sites/nowiki.yml
@@ -7,10 +7,11 @@ homesite: no.wikipedia.org
 othersites:
     - nn.wikipedia.org
     - se.wikipedia.org
+    - smn.wikipedia.org
     - www.wikidata.org
     - commons.wikimedia.org
 default_prefix: no
-wikidata_languages: ['nb', 'nn', 'en']
+wikidata_languages: ['nb', 'nn', 'en', 'se', 'smn']
 contestPages:
     resultsSection: Resultater
     participantsSection: 'Delta[kg]ere'
@@ -125,9 +126,11 @@ ignore:
     - Tilbakestilte endring # MediaWiki:Revertpage/nb
     - Attenderulla endring  # MediaWiki:Revertpage/nn
     - rievdadusat sihkkojuvvui ja siidu  # MediaWiki:Revertpage/se
+    - muokkaukset kumottiin ja sivu palautettiin # MediaWiki:Revertpage/fi (not translated into smn yet)
     - Reverted edits by  # MediaWiki:Revertpage/en
     - Fjerner revisjon # MediaWiki:Undo-summary/nb
     - Rullar attende versjon # MediaWiki:Undo-summary/nn
+    - ^Kumottu muokkaus # MediaWiki:Undo-summary/fi (not translated into smn yet)
     - Undo revision # MediaWiki:Revertpage/en
     - clientsitelink-update  # Wikidata: Page moved from .. to ..
     - clientsitelink-remove  # Wikidata: Removed sitelink
